--- a/_modules/alt_cmd/alt_cmd.dproj
+++ b/_modules/alt_cmd/alt_cmd.dproj
@@ -92,6 +92,8 @@
             <Form>FormMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UnitDraw.pas"/>
+        <DCCReference Include="UnitBuffer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
